components/support/error/tests/returns_not_result.stderr
error: Expected Result<T> or Result<T, E>
  --> tests/returns_not_result.rs:32:15
   |
32 |  fn func() -> String {
   |               ^^^^^^
